2008-01-29  Alexander Larsson  <alexl@redhat.com>

        * Makefile.am:
        * configure.ac:
        * gconf/Makefile.am: Added.
        * gconf/gapplookupgconf.[ch]: Added.
        * gconf/gconf-module.c: Added.
	Add gconf based implementation of
	g_app_info_get_default_for_uri_scheme ()

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* hal/ghalvolumemonitor.c (g_hal_volume_monitor_class_init):
	Remove setting prio/name

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Require glib 2.15.5 for g_file_query_default_handler ().

        * programs/Makefile.am:
        * programs/gvfs-open.c:
	Added gvfs-open app

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.6 ===

2008-01-29  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

        * daemon/Makefile.am:
	Always dist all .mount.in files
	
2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.1.5 ===

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/daemon-main.c:
        * daemon/main.c:
	Include locate.h for setlocale

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* hal/hal-device.c:
	Use gi18n-lib.h, not gi18n.h in client side code.

2008-01-28  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfile.c (g_daemon_file_move):
	Fix typo G_DAEMON_FILE -> G_IS_DAEMON_FILE

	* configure.ac:
	Require glib >= 2.15.4

        * client/gdaemonvfs.c:
        * client/gdaemonvolumemonitor.c:
        * hal/ghalvolumemonitor.c:
	Register with the new extension points API.

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendlocaltest.c:
        * programs/gvfs-cat.c:
	C89 fixes from Jens Granseuer (#511838)

2008-01-28  Alexander Larsson  <alexl@redhat.com>

        * daemon/Makefile.am:
        * daemon/daemon-main.c: